# test-rule

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
benches/: benchmark_large_payloads.rs  rule_execution.rs
examples/: async_integration.rs  basic_usage.rs  bench_500.rs
src/: lib.rs
src/actions/: mod.rs
src/compiler/: bytecode.rs  compiler.rs  mod.rs
src/parser/: ast.rs  lexer.rs  mod.rs  parser.rs
src/runtime/: context.rs  mod.rs  value.rs  vm.rs
tests/: integration_tests.rs
