[package]
name = "fraud-rule-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
ahash = "0.8"
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tokio = { version = "1", features = ["full"] }

[lib]
name = "fraud_rule_engine"
path = "src/lib.rs"

[[bench]]
name = "rule_execution"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "async_integration"
path = "examples/async_integration.rs"
